--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -721,16 +721,36 @@ input[type="radio"]+label:before {
   margin-top: 5px;
   width: 87px;
 }
+.row {text-align: center;}
 .column {
-  float: left;
+  margin: auto;
+  position: relative;
   width: 50%;
   padding: 5px;
+}
+
+@media (max-width: 600px) {
+  .column {
+    margin-right: 175px;
+    position: static;
+  }
+  .row {text-align: center;}
+
+}
+  @media (max-width: 500px) {
+
+    .row {text-align: center;}
+    .column-2 {margin: 5% 15%}
+
+
 }
 .column-2 {
   float: left;
   width: 33.33%;
   padding: 5px;
 }
+
+
 
 .row::after {
   content: "";
