--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1000,10 +1000,10 @@ ul.icons li a {
   border-radius: 100%;
   box-shadow: inset 0 0 0 1px #ffffff;
   display: inline-block;
-  height: 2.25rem;
-  line-height: 2.25rem;
+  height: 4.25rem;
+  line-height: 4.25rem;
   text-align: center;
-  width: 2.25rem;
+  width: 4.25rem;
 }
 
 ul.icons li a:hover {
@@ -1014,6 +1014,9 @@ ul.icons li a:active {
   background-color: rgba(255, 255, 255, 0.175);
 }
 
+.contact-icon {
+  font-size: 33px;
+}
 /* Table */
 .table-wrapper {
   -webkit-overflow-scrolling: touch;
@@ -1370,9 +1373,9 @@ body.is-preload #bg:before {
 }
 
 #header .logo {
-  width: 5.5rem;
-  height: 5.5rem;
-  line-height: 5.5rem;
+  width: 4.75rem;
+  height: 4.75rem;
+  line-height: 4.5rem;
   border: solid 1px #ffffff;
   border-radius: 100%;
 }
@@ -1750,4 +1753,8 @@ body.is-article-visible #footer {
 
 body.is-preload #footer {
   opacity: 0;
+}
+
+html {
+   cursor: url('/Users/Mae/Desktop/WebDev/dark/astronaut.png'), auto;
 }
