--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1756,5 +1756,5 @@ body.is-preload #footer {
 }
 
 html {
-   cursor: url('https://larissabott.github.io/LarissasSite/#/astronaut.png'), auto;
+   cursor: url('https://larissabott.github.io/LarissasSite/astronaut.png'), auto;
 }
